gcc/testsuite/rust/rustc/ui/privacy/sealed-traits/private-trait-non-local_dg.rs
extern crate core;
use core::slice::index::private_slice_index::Sealed; // { dg-error ".E0603." "" { target *-*-* } }
fn main() {
}

